--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the LoginPage page.
+  Generated template for the RegisterPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,15 +7,13 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>Register</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
-  <img src="assets/imgs/my_logo.png" alt="Logo" class="logo">
 
   <ion-card>
     <ion-card-content>
@@ -31,10 +29,8 @@
       </ion-item>
     </ion-card-content>
     <ion-row>
-      <div>
-        <button ion-button (click)="naviagteToPage('RegisterPage')" color="secondary">Register</button>
-        <button ion-button color="primary">Login</button>
-      </div>
+      <button ion-button (click)="register()">Register</button>
     </ion-row>
   </ion-card>
+
 </ion-content>
