--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>Login</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -33,7 +33,7 @@
     <ion-row>
       <div>
         <button ion-button (click)="naviagteToPage('RegisterPage')" color="secondary">Register</button>
-        <button ion-button color="primary">Login</button>
+        <button ion-button (click)="naviagteToPage('InboxPage')" color="primary">Login</button>
       </div>
     </ion-row>
   </ion-card>
