--- a/src/pages/inbox/inbox.html
+++ b/src/pages/inbox/inbox.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>inbox</ion-title>
+    <ion-title>Inbox</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,3 +16,4 @@
 <ion-content padding>
 
 </ion-content>
+
