--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -33,7 +33,7 @@
     <ion-row>
       <div>
         <button ion-button (click)="naviagteToPage('RegisterPage')" color="secondary">Register</button>
-        <button ion-button (click)="naviagteToPage('InboxPage')" color="primary">Login</button>
+        <button ion-button (click)="naviagteToPage('TabsPage')" color="primary">Login</button>
       </div>
     </ion-row>
   </ion-card>
