--- a/src/pages/channels/channels.html
+++ b/src/pages/channels/channels.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>channels</ion-title>
+    <ion-title>Channels</ion-title>
   </ion-navbar>
 
 </ion-header>
