--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -18,7 +18,7 @@
 <!--</ion-content>-->
 
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Inbox"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Channels"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Profile"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Inbox" tabIcon="mail"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Channels" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="person"></ion-tab>
 </ion-tabs>
