--- a/src/pages/inbox/inbox.html
+++ b/src/pages/inbox/inbox.html
@@ -14,6 +14,14 @@
 
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      <ion-avatar item-left>
+        <img src="assets/imgs/avatar.png" alt="Avatar">
+      </ion-avatar>
+      <h2>Hydeenoble</h2>
+      <p>I've just done this...</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
 
