--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,24 +17,6 @@
 
   <img src="assets/imgs/my_logo.png" alt="Logo" class="logo">
 
-  <ion-card>
-    <ion-card-content>
+  <login-form></login-form>
 
-      <ion-item>
-        <ion-label floating>Email Address</ion-label>
-        <ion-input type="text"></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label floating>Password</ion-label>
-        <ion-input type="password"></ion-input>
-      </ion-item>
-    </ion-card-content>
-    <ion-row>
-      <div>
-        <button ion-button (click)="naviagteToPage('RegisterPage')" color="secondary">Register</button>
-        <button ion-button (click)="naviagteToPage('TabsPage')" color="primary">Login</button>
-      </div>
-    </ion-row>
-  </ion-card>
 </ion-content>
