--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,6 +17,6 @@
 
   <img src="assets/imgs/my_logo.png" alt="Logo" class="logo">
 
-  <login-form></login-form>
+  <login-form (loginStatus)="login($event)"></login-form>
 
 </ion-content>
