--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -8,11 +8,14 @@
 
   <ion-navbar>
     <ion-title>Profile</ion-title>
+    <ion-buttons end>
+      <button ion-button (click)="navigateToEditProfilePage()">EDIT</button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content>
-  <profile-view></profile-view>
+  <profile-view (existingProfile)="getExistingProfile($event)"></profile-view>
 </ion-content>
