Adding a send message box

--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -16,3 +16,10 @@
 <ion-content padding>
 
 </ion-content>
+
+
+<ion-footer>
+  <ion-toolbar>
+    <send-message-box></send-message-box>
+  </ion-toolbar>
+</ion-footer>
