--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -18,4 +18,6 @@
 
 <ion-content>
   <profile-view (existingProfile)="getExistingProfile($event)"></profile-view>
+
+  <button ion-button block (click)="signOut()">logout</button>
 </ion-content>
