--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -14,7 +14,8 @@
 
 
 <ion-content padding>
-  <chat-message *ngFor="let chat of messageList; let index = index" [chatMessage]="chat" [chatIndex]="index"></chat-message>
+  <chat-message *ngFor="let chat of messageList; let index = index" [chatMessage]="chat"
+  [userId]="userId"></chat-message>
 </ion-content>
 
 
