--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -21,6 +21,6 @@
 
 <ion-footer>
   <ion-toolbar>
-    <send-message-box></send-message-box>
+    <send-message-box (sendMessage)="sendMessage($event)"></send-message-box>
   </ion-toolbar>
 </ion-footer>
