Displaying one-to-one chat

--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-  <chat-message *ngFor="let chat of messageList; let index = index" [chatMessage]="chat"
+  <chat-message *ngFor="let chat of messageList | async" [chatMessage]="chat"
   [userId]="userId"></chat-message>
 </ion-content>
 
